--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -25,22 +25,7 @@
     <view class="zan-cell__bd">点击查询结果之后将会打开微信内置地图界面</view>
   </view>
 
-  <!--刷新按钮-->
-  <view class="refresh" wx:if="{{size > 0}}" bindtap="doRefresh">
-    <image src="../../images/refresh.png" mode="aspectFit"></image>
-  </view>
-
-  <!--厕所地图上显示按钮-->
-  <view class="location" wx:if="{{size > 0}}" bindtap="navToLocation">
-    <image src="../../images/location.png" mode="aspectFit"></image>
-  </view>
-
-  <!--关于按钮-->
-  <view class="about" wx:if="{{size > 0}}" bindtap="doAbout">
-    <image src="../../images/about.png" mode="aspectFit"></image>
-  </view>
-
-  <!--查无结果时-->
+  <!--查无结果处理界面-->
   <view class="zan-panel no-data" wx:if="{{size == 0}}">
     <image src="../../images/Sorry.png" mode="aspectFit"></image>
     <view class="zan-cell__bd">我真的尽力了，附近1000米没有厕所</view>
@@ -70,4 +55,11 @@
       <button class="zan-btn" bindtap="doRefresh">要不！刷新试试</button>
     </view>
   </view>
+</view>
+
+<!--刷新、定位按钮按钮-->
+<view class="handle" wx:if="{{onLine && yesAuth}}">
+  <image class="location" src="../../images/location.png" mode="aspectFit" bindtap="doNavToLocation"></image>
+  <image class="refresh" src="../../images/refresh.png" mode="aspectFit" bindtap="doRefresh"></image>
+  <image class="about" src="../../images/about.png" mode="aspectFit" bindtap="doAbout"></image>
 </view>
