--- a/pages/location/location.wxss
+++ b/pages/location/location.wxss
@@ -1,39 +1,53 @@
-view {
+/*容器区域*/
+.main {
   height: calc(100vh);
   width: 100%;
 }
 
+/*地图样式控制*/
 map {
-  height: calc(100vh);
+  height: calc(100vh - 120rpx);
   width: 100%;
 }
 
-.dialog {
-  display: flex;
-  position: fixed;
-  left: 0;
-  width: calc(100vw);
-  height: 280rpx;
-  background-color: #fff;
-  z-index: 2000;
-  -webkit-transform: all 1s ease;
-  -ms-transform: all 1s ease;
-  -moz-transform: all 1s ease;
-  transform: all 1s ease;
+/*底部详细信息控制*/
+.descript {
+  height: 120rpx;
+  width: 100%;
 }
 
-.dialog-show {
-  bottom: 0;
-  -webkit-transform: all 1s ease;
-  -ms-transform: all 1s ease;
-  -moz-transform: all 1s ease;
-  transform: all 1s ease;
+.descript {
+  position: absolute;
+  height: 120rpx;
+  bottom: 0rpx;
+  left: 0rpx;
+  right: 0rpx;
 }
 
-.dialog-hide {
-  bottom: -280rpx;
-  -webkit-transform: all 1s ease;
-  -ms-transform: all 1s ease;
-  -moz-transform: all 1s ease;
-  transform: all 1s ease;
+.descript .text {
+  height: 38rpx;
+  margin-left: 30rpx;
+  font-size: 35rpx;
+  line-height: 38rpx;
+  margin-top: 6rpx;
+}
+
+.descript .text:first-child {
+  margin-top: 20rpx;
+}
+/*详细路径导航按钮*/
+.detail_button {
+  position: absolute;
+  bottom: 25rpx;
+  right: 38rpx;
+  padding: 6rpx 8rpx;
+  color: #fff;
+  background: #0091ff;
+  width: 130rpx;
+  text-align: center;
+  border-radius: 9rpx;
+}
+
+.detail_button:active{
+  background: #1283d8;
 }
