完成个人说明界面

--- a/pages/location/location.wxml
+++ b/pages/location/location.wxml
@@ -10,7 +10,7 @@
   </map>
   <view class="descript">
     <view class="left">
-      <view class="name">{{name}}</view>
+      <view class="name">{{toiletName}}</view>
       <view class="brief-addr">{{briefAddr}}</view>
     </view>
     <view class="right">
