--- a/pages/author/author.wxml
+++ b/pages/author/author.wxml
@@ -1,6 +1,7 @@
 <view class="view">
   <image class="logo" src="../../images/toilet.png"></image>
   <view class="version">V 2.0</view>
+  <view class="title">小明带你找厕所</view>
   <view class="zan-panel">
     <view class="zan-cell" bindtap="doAuthor">
       <view class="zan-cell__bd">github</view>
@@ -8,7 +9,7 @@
     </view>
     <view class="zan-cell" bindtap="doFunction">
       <view class="zan-cell__bd">blog</view>
-      <view class="zan-cell__ft">http://liumingmusic.coding.me/liumingmusic</view>
+      <view class="zan-cell__ft">http://liumingmusic.coding.me</view>
     </view>
     <view class="zan-cell" bindtap="doHelp">
       <view class="zan-cell__bd">csdn</view>
@@ -17,10 +18,6 @@
     <view class="zan-cell" bindtap="doHelp">
       <view class="zan-cell__bd">email</view>
       <view class="zan-cell__ft">liuming_music@163.com</view>
-    </view>
-    <view class="zan-cell" bindtap="doHelp">
-      <view class="zan-cell__bd">zhihu</view>
-      <view class="zan-cell__ft">https://www.zhihu.com/people/liuming_music</view>
     </view>
   </view>
 </view>
