--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,31 +1,39 @@
 <view class="container" wx:if="{{onLine && yesAuth}}">
-  <!--顶部基本信息-->
-  <view class="zan-panel" wx:if="{{size > 0}}">
-    <view class="zan-cell s-height">
-      <view class="zan-cell__bd" wx:if="{{parkingAndToiletFlag}}">为你推荐附近的{{size}}个公共厕所</view>
-      <view class="zan-cell__bd" wx:if="{{!parkingAndToiletFlag}}">为你推荐附近的{{size}}个停车场</view>
-      <button class="zan-btn zan-btn--mini zan-btn--plain" bindtap="navToSetting"></button>
+  <!-- 小地图 -->
+  <view class="top-view">
+    <map id="map" 
+        longitude="{{longitude}}" 
+        latitude="{{latitude}}" 
+        scale="15" 
+        markers="{{markers}}"
+        bindmarkertap="doMarkertap"
+        show-location>
+    </map>
+    <!--顶部基本信息-->
+    <view class="zan-panel tip-msg" wx:if="{{size > 0}}">
+      <view class="zan-cell s-height">
+        <view class="zan-cell__bd" wx:if="{{parkingAndToiletFlag}}">为你推荐附近的{{size}}个公共厕所</view>
+        <view class="zan-cell__bd" wx:if="{{!parkingAndToiletFlag}}">为你推荐附近的{{size}}个停车场</view>
+        <button class="zan-btn zan-btn--mini zan-btn--plain" bindtap="navToSetting"></button>
+      </view>
     </view>
   </view>
-
   <!--视图滚动区域-->
   <scroll-view class="scroll" scroll-y="true" wx:if="{{size > 0}}">
     <view class="zan-panel">
-      <view class="zan-cell zan-cell--access" wx:for="{{list}}" wx:key="unique" data-id="{{item.id}}" bindtap="tapItem">
+      <view class="zan-cell zan-cell--access" wx:for="{{list}}" wx:key="unique" data-id="{{item.id}}"  bindtap="tapItem">
         <view class="zan-cell__bd">
           {{item.name}}
           <view class="address">{{item.briefAddr}}</view>
         </view>
-        <view class="zan-cell__ft">相距{{item.distance}}米</view>
+        <view class="zan-cell__ft">{{item.distance}}米</view>
       </view>
     </view>
+     <!--底部说明信息-->
+    <view class="zan-panel bottom-desc" wx:if="{{size > 0}}">
+      <view class="zan-cell__bd">点击查询结果之后将会进行路径规划</view>
+    </view>
   </scroll-view>
-
-  <!--底部说明信息-->
-  <view class="zan-panel bottom-desc" wx:if="{{size > 0}}">
-    <view class="zan-cell__bd">点击查询结果之后将会进行路径规划</view>
-  </view>
-
   <!--查无结果处理界面-->
   <view class="zan-panel no-data" wx:if="{{size == 0}}">
     <image src="../../images/Sorry.png" mode="aspectFit"></image>
